--- a/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
+++ b/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
@@ -23,7 +23,7 @@
 }
 
 \lstset{style=mystyle}
-
+\usepackage[draft,nosingleletter]{impnattypo}
 \begin{document}
 
 %--------------------------------------
