--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -386,6 +386,16 @@ volume = {2017},
 address = {Geneva, CH},
 institution = {International Organization for Standardization}
 }
+ @misc{dotnet:method_inlining, title={Compile-time method inlining · discussion \#1413 · dotnet/csharplang}, 
+ url={https://github.com/dotnet/csharplang/discussions/1413}, 
+ journal={GitHub}, 
+ author={Dotnet}
+ } 
+@misc{lohmann, 
+  title={Nlohmann/JSON: JSON for Modern C++},
+  url={https://github.com/nlohmann/json},
+  journal={GitHub},
+  author={Lohmann, Niels}} 
 
 @techreport{ecma:cli,
 type = {Standard},
@@ -439,6 +449,30 @@ institution = {ECMA (European Association for Standardizing Information and Comm
     title        = "{FIPS} 180-4: {S}ecure {H}ash {S}tandard ({SHS})",
     howpublished = "Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}",
     year         = "2015"
+}
+
+
+@inproceedings{dos2010general_constant_expressions,
+  title={General constant expressions for system programming languages},
+  author={Dos Reis, Gabriel and Stroustrup, Bjarne},
+  booktitle={Proceedings of the 2010 ACM Symposium on Applied Computing},
+  pages={2131--2136},
+  year={2010}
+}
+
+@inproceedings{gregor2007variadic,
+  title={Variadic templates for C++},
+  author={Gregor, Douglas and J{\"a}rvi, Jaakko},
+  booktitle={Proceedings of the 2007 ACM symposium on Applied computing},
+  pages={1101--1108},
+  year={2007}
+}
+
+@article{leach2005universally,
+  title={A universally unique identifier (uuid) urn namespace},
+  author={Leach, Paul and Mealling, Michael and Salz, Rich},
+  year={2005},
+  publisher={RFC 4122 (Proposed Standard)}
 }
 
 % Praca magisterska.
