--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -198,7 +198,6 @@ fn functionAcceptingAttribute(parameter: _att_ MyAttribute) {
 	parameter.method();
 }
 \end{lstlisting}
-%todo: finish
 \subsection{Mechanizm atrybutów}
 \label{Attributes_mechanism_cm1}
 
@@ -227,7 +226,8 @@ Sytuacja, w której atrybut musi użyć kodu z pakietu, w którym jest zdefiniow
 \begin{figure}
 	\caption{Diagram ilustrujący przykładowe zależności między atrybutem a funkcjami}
 	\label{design:attributes:attribute_function_dependendcy}
-	\includegraphics{attribute_function_dependency.png}
+	\centering
+	\includegraphics[height=5cm]{attribute_function_dependency.png}
 \end{figure}
 
 \subsubsection{Funkcje specjalne}
