--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -450,7 +450,16 @@ institution = {ECMA (European Association for Standardizing Information and Comm
     howpublished = "Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}",
     year         = "2015"
 }
-
+@article{kemper1995swizzling,
+  title={Adaptable pointer swizzling strategies in object bases: Design, realization, and quantitative analysis},
+  author={Kemper, Alfons and Kossmann, Donald},
+  journal={The VLDB Journal},
+  volume={4},
+  number={3},
+  pages={519--566},
+  year={1995},
+  publisher={Springer}
+}
 
 @inproceedings{dos2010general_constant_expressions,
   title={General constant expressions for system programming languages},
